<resources>
    <string name="app_name">LogInScreen</string>
    <string name="title">My News Feed</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_button">Login</string>
    <string name="login_signup">Sign up</string>
    <string name="my_location">My Location</string>
    <string name="international">U.S.A. News</string>
</resources>